deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: oauth2-client
  labels:
    app: oauth2-client
    app.kubernetes.io/component: oauth2-client
    app.kubernetes.io/instance: oauth2-client
    app.kubernetes.io/name: oauth2-client
    app.kubernetes.io/part-of: oauth2-client-app
    app.openshift.io/runtime-namespace: oauth2-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-client
  template:
    metadata:
      labels:
        app: oauth2-client
        deployment: oauth2-client
    spec:
      containers:
        - name: oauth2-client
          image: quay.io/fcarrus/oauth2-client:latest
          ports:
            - name: http
              containerPort: 8081
              protocol: TCP
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
---
kind: Service
apiVersion: v1
metadata:
  name: oauth2-client
  labels:
    app: oauth2-client
    app.kubernetes.io/component: oauth2-client
    app.kubernetes.io/instance: oauth2-client
    app.kubernetes.io/name: oauth2-client
    app.kubernetes.io/part-of: oauth2-client-app
    app.openshift.io/runtime-version: latest
spec:
  ports:
    - name: 8081-tcp
      protocol: TCP
      port: 8081
      targetPort: 8081
  selector:
    app: oauth2-client
    deployment: oauth2-client
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: oauth2-client
  labels:
    app: oauth2-client
    app.kubernetes.io/component: oauth2-client
    app.kubernetes.io/instance: oauth2-client
    app.kubernetes.io/name: oauth2-client
    app.kubernetes.io/part-of: oauth2-client-app
    app.openshift.io/runtime-version: latest
spec:
  to:
    kind: Service
    name: oauth2-client
    weight: 100
  port:
    targetPort: 8081-tcp
  wildcardPolicy: None
